@@ -21,6 +21,7 @@ sensord (0.6.39) unstable; urgency=low
   * AccelerometerChain transformation matrix is now instance specific.
   * Changed buffersizes to 1.
   * Removed ugly optimization from RingBuffer.
+  * Merged back pipe to SensorManager to delegate socket writing to Qt eventloop thread.
 
  -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Tue, 08 Feb 2011 13:35:32 +0200
 
